// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Splunk connector Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Connector Details
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Delegate selection
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          Splunk Connector Details
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          Name
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px;"
                      >
                        Description
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="description-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px;"
                      >
                        Tags
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Splunk connector Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Connector Details
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Delegate selection
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <form
        class="FormikForm--main connectionForm"
      >
        <div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main appDContainer"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-medium"
            >
              Splunk Connection Details
            </p>
            <div
              class="bp3-form-group"
              data-id="url-0"
            >
              <label
                class="bp3-label"
                for="url"
              >
                Url
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="url"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="username-1"
            >
              <label
                class="bp3-label"
                for="username"
              >
                Username
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="username"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="null-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <label
                    class="bp3-label"
                  >
                    Password
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main inputButton"
                    data-testid="passwordRef"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          Create or Select a Secret
                        </span>
                      </div>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <button
              class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Connect and Save
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Create Splunk connector Wizard should render form 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Connector Details
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Delegate selection
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <form
        class="FormikForm--main connectionForm"
      >
        <div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main appDContainer"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-medium"
            >
              Splunk Connection Details
            </p>
            <div
              class="bp3-form-group"
              data-id="url-0"
            >
              <label
                class="bp3-label"
                for="url"
              >
                Url
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="url"
                    type="text"
                    value="dummy url"
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-intent-danger"
              data-id="username-1"
            >
              <label
                class="bp3-label"
                for="username"
              >
                Username
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-intent-danger"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="username"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="bp3-form-helper-text"
                >
                  username is a required field
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-intent-danger"
              data-id="null-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <label
                    class="bp3-label"
                  >
                    Password
                  </label>
                  <button
                    class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main inputButton"
                    data-testid="passwordRef"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                        style="align-items: center; width: 100%;"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <span>
                          Create or Select a Secret
                        </span>
                      </div>
                    </span>
                  </button>
                </div>
                <div
                  class="bp3-form-helper-text"
                >
                  passwordRef is a required field
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <button
              class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Connect and Save
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
